# Viz4Sci

./: 3D Plot.ipynb  Airline Traffic States.ipynb  Candlestick Chart.ipynb  Christmas Animation.ipynb  Color Blindness.ipynb  Color Scheme.ipynb  Country Heatmap.ipynb  Effect of Vaccination.ipynb  Gapminder.ipynb  Joyplot.ipynb  Mandelbrot Set.ipynb  NASA Climate Spiral.ipynb  Nightingale.ipynb  Rotating Global Heatmap.ipynb  SF Crime.ipynb  Surface Plot.ipynb  Timeseries Map.ipynb  Vaccination.ipynb  Waterfall plot.ipynb  World Airport Locations.ipynb  pyproject.toml
data/: amaps.txt
